@@ -38,6 +38,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed libldap sync checking for BER errors (ITS#6738)	
 	Fixed libldap MozNSS default cipher suites (ITS#6790)
 	Fixed libldap MozNSS cert usage types/values (ITS#6791)
+	Fixed libldap MozNSS restart module (ITS#6802)
 	Fixed liblutil getpass prompts (ITS#6702)
 	Fixed ldapsearch segfault with deref (ITS#6638)
 	Fixed ldapsearch multiple controls parsing (ITS#6651)
